Fix app bar look on mobile screen

--- a/reader/components/header/styles.module.css
+++ b/reader/components/header/styles.module.css
@@ -7,7 +7,7 @@
 }
 
 .app-bar > * {
-  flex: 1;
+  flex: 1 1 auto;
 }
 
 .item-center {
